# halfway2

./: Chat Project.ipynb  Precompute travel times.ipynb  Procfile  Pub Side Project.ipynb  Pubs & Tubes V3.ipynb  Pubs and Tube.ipynb  Pubs and Tubes v2.ipynb  Scratch Script.ipynb  Station Data.ipynb  Test.ipynb  Untitled.ipynb  app.py  defining_maths.ipynb  halfway_app.py  main.py  pubsandtubes_v_1.py  pubsandtubes_v_2.py  pubswithdist.csv  pyproject.toml  requirements.txt  setup.sh  station_to_station_time.csv  test.html
.devcontainer/: devcontainer.json
.ipynb_checkpoints/: Precompute travel times-checkpoint.ipynb  Pub Side Project-checkpoint.ipynb  Pubs & Tubes V3-checkpoint.ipynb  Pubs and Tube-checkpoint.ipynb  Scratch Script-checkpoint.ipynb  Station Data-checkpoint.ipynb  defining_maths-checkpoint.ipynb
