[project]
name = "halfway2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pydeck>=0.9.1",
    "streamlit>=1.54.0",
    "streamlit-folium>=0.26.2",
]
